[package]
name = "chatternet-server-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitystreams-kinds = "0.2.1"
anyhow = "1.0.66"
async-trait = "0.1.58"
chrono = "0.4.22"
cid = "0.8.6"
clap = { version = "4.0.18", features = ["derive"] }
did-method-key = { path = "libs/ssi/did-key" }
ed25519-dalek = "1.0.1"
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
ssi = { path = "libs/ssi" }
tokio = { version = "1.21.2", features = ["full"] }
warp = "0.3.3"
